npc 패치 (1) -메모장 오브젝트 추가 -utf-8 퍼즐 추가 -검 강화 및 키보드 분해 구현중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity android:name=".password"
             android:label="password"
             android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
+        <activity android:name=".npc"
+            android:label="npc"
+            android:theme="@android:style/Theme.Dialog"/>
     </application>
 
 </manifest>
