--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,25 +19,43 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".data"
+            android:label="data"
+            android:screenOrientation="portrait"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".Stage1"
             android:label="Stage1"
             android:screenOrientation="portrait"/>
         <activity
+            android:name=".Stage3"
+            android:label="Stage3"
+            android:screenOrientation="portrait"/>
+        <activity0
             android:name=".Inventory"
             android:label="Inventory"
+            android:theme="@android:style/Theme.Dialog"/>
+        <activity
+            android:name=".Inven_st3"
+            android:label="Inven_st3"
             android:theme="@android:style/Theme.Dialog"/>
         <activity
             android:name=".Stage0"
             android:label="Stage0"
             android:screenOrientation="portrait"/>
-        <activity android:name=".password"
+        <activity
+            android:name=".st3_password"
+            android:label="st3_password"
+            android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
+        <activity
+            android:name=".password"
             android:label="password"
             android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
     </application>
+
 
 </manifest>
