엔딩 추가(완성) -추후에 주석 추가 작업

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
         <activity android:name=".npc"
             android:label="npc"
             android:theme="@android:style/Theme.Dialog"/>
+        <activity android:name=".ending"
+            android:label="ending"
+            android:screenOrientation="portrait"/>
     </application>
 
 
